--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <p>This is a paragraph.</p>
 <p>This is a paragraph.</p>
 <p>This is a paragraph.</p>
+<a href="https://www.facebook.com/daPerkons/">This is a link</a>
 </body>
 </html>
